--- a/styles/main1.css
+++ b/styles/main1.css
@@ -8,9 +8,11 @@ body {
     background-color: white;
     margin: 15px auto;
     padding: 15px 1.5em;
-    border: border: 1px solid black;
+    border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
+    background-image: url("../images/cat.jpg");
+    
 }
 a:focus, a:hover {
     font-style: italic;
@@ -34,10 +36,20 @@ header img {
 }
 main {
     clear: left;
+
 }
+
 main h3 {
-    margin-top: 3em;
+    margin: 1.5em 2em 1.5em;
+    border: 5px dashed teal;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px orange;
+    padding: 0.5em 0.5em 0.5em 0.5em;
     font-size: 105%;
+}
+main nav{
+    margin: 1.5em 2em 1.5em;
+    
 }
 #list {
     line-height: 1.5em;
