--- a/styles/main1.css
+++ b/styles/main1.css
@@ -1,5 +1,5 @@
 html {
-    backround-image: linear-gradient(to bottom, white 0%, Blue 100%);
+    background-image: linear-gradient(to bottom, white 0%, Blue 100%);
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -11,7 +11,7 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("../images/cat.jpg");
+    background-image: url("../images/cat.jpg") repeat-y fixed right top
     
 }
 a:focus, a:hover {
@@ -38,7 +38,13 @@ main {
     clear: left;
 
 }
-
+div {
+    margin: 1.5em 2em 0em 2em;
+    border: 5px dotted blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 1em;
+}
 main h3 {
     margin: 1.5em 2em 1.5em;
     border: 5px dashed teal;
@@ -49,7 +55,10 @@ main h3 {
 }
 main nav{
     margin: 1.5em 2em 1.5em;
-    
+    border: 5px dashed blue;
+    border-radius: 20px;
+    box-shadow: 3px 3px 4px 4px red;
+    padding: 0.5em;
 }
 #list {
     line-height: 1.5em;
