--- a/styles/main1.css
+++ b/styles/main1.css
@@ -11,7 +11,8 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("../images/cat.jpg") repeat-y fixed right top
+    background-image: url("../images/cat.jpg") 
+    repeat-y fixed center right; 
     
 }
 a:focus, a:hover {
