--- a/styles/main1.css
+++ b/styles/main1.css
@@ -1,5 +1,5 @@
 html {
-    background-image: linear-gradient(to bottom, white 0%, Blue 100%);
+    background-image: linear-gradient(to bottom, white 0%, teal 100%);
 }
 body {
     font-family: Arial, Helvetica, sans-serif;
@@ -11,9 +11,10 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("../images/cat.jpg") 
-    repeat-y fixed right; 
-    
+    background-image: url("../images/cat.jpg"); 
+    background-repeat: repeat-y;
+    background-position: right;
+    background-attachment: fixed;
 }
 a:focus, a:hover {
     font-style: italic;
@@ -41,7 +42,7 @@ main {
 }
 div {
     margin: 1.5em 2em 0em 2em;
-    border: 5px dotted blue;
+    border: 5px dotted teal;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: 1em;
@@ -56,7 +57,7 @@ main h3 {
 }
 main nav{
     margin: 1.5em 2em 1.5em;
-    border: 5px dashed blue;
+    border: 5px dashed teal;
     border-radius: 20px;
     box-shadow: 3px 3px 4px 4px red;
     padding: 0.5em;
