--- a/styles/main1.css
+++ b/styles/main1.css
@@ -11,7 +11,7 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("../images/image0\ \(3\).jpeg") width 40px height 40px;
+    background-image: url("../images/cat.jpg") ;
     background-repeat: repeat-y;
     background-position: right;
     background-attachment: fixed;
