--- a/styles/project.css
+++ b/styles/project.css
@@ -66,6 +66,8 @@ aside {
     width: 20%;
     float: right;
     background-color: #ffebc6;
+    padding-left: 10px;
+    padding-bottom: 3px;
 
 }
 footer {
