--- a/styles/main1.css
+++ b/styles/main1.css
@@ -15,7 +15,7 @@ body {
     background-repeat: repeat-y;
     background-position: right;
     background-attachment: fixed;
-    z-index: -1
+    z-index: -1;
 }
 a:focus, a:hover {
     font-style: italic;
