--- a/styles/project.css
+++ b/styles/project.css
@@ -71,3 +71,8 @@ footer {
     clear: both;
     border-top: 2px solid maroon;
 }
+
+ footer p.fixed {
+    text-align: center;
+    font-size: 80%;
+}
