--- a/styles/project.css
+++ b/styles/project.css
@@ -78,7 +78,8 @@ footer {
 
 body p.fixed {
     width: 20%;
-    float: right;
+    position: fixed;
+    bottom: 100px;
     background-color: lightgreen;
     padding: 15px;
     border: 5 bold black
