--- a/styles/project.css
+++ b/styles/project.css
@@ -82,6 +82,6 @@ body p.fixed {
     bottom: 350px;
     right: 50px;
     background-color: lightgreen;
-    padding: 15px;
-    border: 5 bold black
+    padding: 10px;
+    border: 5px bold black
 }
