--- a/styles/project.css
+++ b/styles/project.css
@@ -57,7 +57,7 @@ article p::first-letter {
     font-size: 3em;
     font-weight: bold;
     font-style: italic;
-    color: lightgreen;
+    color: lightsteelblue;
 }
 aside {
     width: 20%;
@@ -77,7 +77,7 @@ footer {
 }
 
 body p.fixed {
-    width: 20%;
+    width: auto;
     position: fixed;
     bottom: 350px;
     right: 53px;
