--- a/styles/project.css
+++ b/styles/project.css
@@ -39,6 +39,7 @@ header img {
 article{
     clear: left;
     width: 70%;
+    border-top: 2px bold maroon;
     float: left;
     column-count: 2;
     column-rule: 2px dotted maroon;
