--- a/styles/project.css
+++ b/styles/project.css
@@ -47,7 +47,8 @@ article{
 }
 article h3{
     margin-top: 5px;
-    border-top: 5px solid black;
+    border-top: 1px solid maroon;
+    padding: 5px;
     column-span: all;
 }
 article img {
