--- a/styles/menu.css
+++ b/styles/menu.css
@@ -14,6 +14,10 @@ border-right: 2px solid white; }
 #nav_menu ul li a.lastitem { border-right: none; }
 #nav_menu ul li a.current { color: yellow; }
 
+aside h2 {
+    float: left;
+}
+
 aside ol {
     list-style-type: upper-roman;
 }
