--- a/styles/menu.css
+++ b/styles/menu.css
@@ -14,7 +14,9 @@ border-right: 2px solid white; }
 #nav_menu ul li a.lastitem { border-right: none; }
 #nav_menu ul li a.current { color: yellow; }
 
-
+article h1 {
+    float: left;
+}
 
 aside ol {
     list-style-type: upper-roman;
