--- a/styles/menu.css
+++ b/styles/menu.css
@@ -15,7 +15,7 @@ border-right: 2px solid white; }
 #nav_menu ul li a.current { color: yellow; }
 
 article h1 {
-    float: left;
+    float: bottom;
 }
 
 aside ol {
