--- a/styles/exam.css
+++ b/styles/exam.css
@@ -13,3 +13,9 @@ font-weight: bold;
 border-right: 2px solid white; }
 #nav_menu ul li a.lastitem { border-right: none; }
 #nav_menu ul li a.current { color: yellow; }
+
+article {
+    column-count: 3;
+    column-gap: 15px;
+    column-rule: 2px dashed blue;
+}
