--- a/styles/exam.css
+++ b/styles/exam.css
@@ -14,6 +14,10 @@ border-right: 2px solid white; }
 #nav_menu ul li a.lastitem { border-right: none; }
 #nav_menu ul li a.current { color: yellow; }
 
+nav_menu {
+    border-bottom: 2px solid blue;
+}
+
 article {
     column-count: 3;
     column-gap: 15px;
