--- a/styles/exam.css
+++ b/styles/exam.css
@@ -17,7 +17,7 @@ border-right: 2px solid white; }
 
 
 article {
-    padding-left: 20px;
+    width: 75%;
     column-count: 3;
     column-gap: 15px;
     column-rule: 2px dashed blue;
@@ -32,4 +32,8 @@ body {
     background-repeat: repeat-y;
     background-position: right;
     background-attachment: fixed;
+}
+
+aside {
+    width: 20%;
 }
