--- a/styles/exam.css
+++ b/styles/exam.css
@@ -1,3 +1,7 @@
+html {
+    background-image: linear-gradient(to bottom, white 0%, teal 100%);
+}
+
 #nav_menu ul { list-style-type: none; }
 #nav_menu ul li { float: left; }
 #nav_menu ul li a {
