--- a/styles/exam.css
+++ b/styles/exam.css
@@ -31,6 +31,10 @@ article h1 {
     padding-top: 10px;
 }
 
+article img {
+    float: left;
+}
+
 article p::first-letter {
     font-size: 3em;
     font-weight: bold;
