--- a/styles/exam.css
+++ b/styles/exam.css
@@ -46,10 +46,20 @@ article p::first-letter {
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    width: 80%;
+    background-color: white;
+    margin: 15px auto;
+    padding: 15px 1.5em;
+    border: 1px solid black;
+    border-radius: 25px;
+    box-shadow: 5px 5px 0 0;
     background-image: url("../images/dimondpxart.png");
     background-repeat: repeat-y;
     background-position: right;
     background-attachment: fixed;
+    
 }
 
 aside {
