--- a/styles/exam.css
+++ b/styles/exam.css
@@ -25,6 +25,7 @@ article {
     column-count: 3;
     column-gap: 15px;
     column-rule: 3px dashed blue;
+    border-top: 2px solid blue;
 }
 
 article h1 {
