--- a/styles/exam.css
+++ b/styles/exam.css
@@ -9,6 +9,7 @@ text-align: center;
 display: block;
 width: 175px;
 padding: 1em 0;
+padding-bottom: 1em;
 
 text-decoration: none;
 background-color: blue;
