--- a/styles/table.css
+++ b/styles/table.css
@@ -9,3 +9,15 @@ table.first tr:nth-child(odd) {
     background-color: lightblue;
 }
 
+table.second {
+    border-collapse: collapse;
+    border: 2px solid purple;
+    caption-side: bottom;
+}
+
+table.second th {
+    background-color: salmon;
+}
+table.second th, table.second td {
+    border: 2px solid purple;
+}
