--- a/styles/table.css
+++ b/styles/table.css
@@ -20,5 +20,7 @@ table.second th {
 }
 
 table.second th, table.second td {
+    padding: .7em;
+    vertical-align: middle;
     border: 2px solid purple;
 }
