--- a/styles/table.css
+++ b/styles/table.css
@@ -33,3 +33,14 @@ table.third th, table.second td{
     vertical-align: middle;
     border-top: 1px solid black;
 }
+
+
+@media only screen and (max-width: 425px) {
+    th, td {
+    display: block;
+    }
+    thead, td.number {
+    display: none;
+    padding: 0;
+    }
+}    
