--- a/styles/table.css
+++ b/styles/table.css
@@ -34,7 +34,7 @@ table.third th, table.second td{
     vertical-align: top;
 }
 table.third thead tr:first-child { 
-    border-top: 2px solid orangered;}
+    border-top: 2px solid pink;}
 
 @media only screen and (max-width: 425px) {
     th, td {
