--- a/styles/exam.css
+++ b/styles/exam.css
@@ -69,6 +69,10 @@ body {
 
 aside {
     width: 20%;
+    float: right;
+    background-color: #ffebc6;
+    padding-left: 10px;
+    padding-bottom: 3px;
 }
 
 footer p.copyright {
