--- a/styles/exam.css
+++ b/styles/exam.css
@@ -75,6 +75,11 @@ aside {
     padding-bottom: 3px;
 }
 
+footer {
+    clear: both;
+    border-top: 2px solid blue;
+}
+
 footer p.copyright {
     text-align: center;
     font-size: 80%;
