--- a/styles/exam.css
+++ b/styles/exam.css
@@ -74,7 +74,13 @@ aside {
     padding-left: 10px;
     padding-bottom: 3px;
 }
+aside ol {
+    list-style-type: upper-roman;
+}
 
+aside ul {
+    list-style-type: square;
+}
 footer {
     clear: both;
     border-top: 2px solid blue;
