--- a/styles/exam.css
+++ b/styles/exam.css
@@ -81,6 +81,9 @@ aside ol {
 aside ul {
     list-style-type: square;
 }
+#olembed {
+    list-style-type: lower-alpha;
+}
 footer {
     clear: both;
     border-top: 2px solid blue;
