--- a/styles/exam.css
+++ b/styles/exam.css
@@ -60,7 +60,8 @@ body {
     border: 1px solid black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background-image: url("/images/diamondtake2.png");
+    background-image: url("/images/dimondpxart.png");
+    background-size: 300px 200px;
     background-repeat: repeat-y;
     background-position: right;
     background-attachment: fixed;
