--- a/styles/exam.css
+++ b/styles/exam.css
@@ -79,6 +79,10 @@ aside {
     background-color: #ffebc6;
     padding-left: 10px;
     padding-bottom: 3px;
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
+
 }
 aside ol {
     list-style-type: upper-roman;
