--- a/styles/exam.css
+++ b/styles/exam.css
@@ -84,12 +84,13 @@ aside {
     left: 0%;
     margin-right: 20px;
 }
+
 aside ol {
     list-style-type: upper-roman;
 }
 
 aside ul {
-    list-style-type: square;
+    list-style-type: circle;
 }
 
 footer {
