--- a/styles/exam.css
+++ b/styles/exam.css
@@ -55,6 +55,10 @@ article p::first-letter {
     color: lightsteelblue;
 }
 
+article h1, article h2 {
+    color: blue;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
