--- a/styles/exam.css
+++ b/styles/exam.css
@@ -11,7 +11,7 @@ text-align: center;
 display: block;
 width: 175px;
 padding: 1em 0;
-border-bottom: 2px solid blue
+border-bottom: 2px solid blue;
 padding-bottom: 1em;
 
 text-decoration: none;
