--- a/styles/exam.css
+++ b/styles/exam.css
@@ -87,7 +87,7 @@ aside {
     top: 50%;
     position: fixed;
     transform: translateY(50%);
-    float: left;
+    float: right;
 }
 
 aside ol {
