--- a/styles/exam.css
+++ b/styles/exam.css
@@ -84,6 +84,7 @@ aside {
     background-color: #c6e5ff;
     top: 50%;
     right: 10px;
+    transform: translateY(-50%);
     padding: 10px;
     margin: 10px;
     
