--- a/styles/exam.css
+++ b/styles/exam.css
@@ -83,7 +83,7 @@ aside {
     width: 20%;
     background-color: #c6e5ff;
     top: 50%;
-    left: 10px;
+    right: 10px;
     transform: translateY(-50%);
     padding: 10px;
     margin: 10px;
