--- a/styles/table.css
+++ b/styles/table.css
@@ -28,13 +28,17 @@ table.second th, table.second td {
     border: 2px solid purple;
 }
 
-
-table.third th, table.second td{
-    padding: .7em;
-    vertical-align: top;
+table.third {
+    border-collapse: collapse;
+    border: 2px solid purple;
+    caption-side: top;
 }
-table.third thead tr:first-child { 
-    border-top: 2px solid pink;}
+
+table.third th, table.third td {
+    padding: .7em;
+    vertical-align: middle;
+    border: 2px solid purple;
+}
 
 @media only screen and (max-width: 425px) {
     th, td {
