--- a/styles/table.css
+++ b/styles/table.css
@@ -28,9 +28,12 @@ table.second th, table.second td {
     border: 2px solid purple;
 }
 
+table.third th{
+    background-color: lime;
+}
+
 table.third {
-    border-collapse: collapse;
-    border: 2px solid purple;
+    
     caption-side: top;
 }
 
