--- a/styles/table.css
+++ b/styles/table.css
@@ -29,7 +29,7 @@ table.second th, table.second td {
 }
 
 table.third th{
-    background-color: lime;
+    background-color: green;
 }
 
 table.third {
