--- a/styles/table.css
+++ b/styles/table.css
@@ -55,6 +55,8 @@ table.third th {
 table.third th, .third td {
     text-align: center;
     padding: 5px;
+    border-bottom: salmon;
+    
 }
  
   
